--- a/sprin-boot-backend-apirest-recetas/src/main/resources/application.properties
+++ b/sprin-boot-backend-apirest-recetas/src/main/resources/application.properties
@@ -3,5 +3,8 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 logging.level.org.hibernate.SQL=debug
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
