incuido creacion de usuarios

--- a/sprin-boot-backend-apirest-recetas/src/main/resources/application.properties
+++ b/sprin-boot-backend-apirest-recetas/src/main/resources/application.properties
@@ -3,8 +3,14 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+spring.mail.host = smtp.gmail.com
+spring.mail.username = soporte.tus.recetas@gmail.com
+spring.mail.password = 0o9i8u7y6T
+spring.mail.port = 587
+spring.mail.properties.mail.smtp.starttls.enable = true
