--- a/sprin-boot-backend-apirest-recetas/src/main/resources/application.properties
+++ b/sprin-boot-backend-apirest-recetas/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=root
 spring.datasource.password=sasa
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 logging.level.org.hibernate.SQL=debug
 
 spring.servlet.multipart.max-file-size=10MB
